--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,50 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
+
+  # _config.yml
+
+  #old
+
+# Site settings
+# title: Your Blog Title
+# description: A brief description of your blog
+# url: "https://loydox69.github.io"
+# baseurl: "" # Leave this empty for GitHub Pages
+
+# Build settings
+theme: jekyll-theme-minimal # Replace with the name of your chosen theme
+
+# GitHub Pages settings
+markdown: kramdown
+remote_theme: # If using a remote theme, specify the theme repository
+  - <theme-author>/<theme-repository>
+
+# plugins:
+#   - jekyll-feed
+
+# Optional settings
+author:
+  name: Your Name
+  email: your.email@example.com
+  bio: A short bio about yourself
+
+# Navigation links
+nav:
+  - text: Home
+    url: /
+  - text: About
+    url: /about
+
+# Social links
+social:
+  - title: GitHub
+    url: https://github.com/<your-username>
+  - title: Twitter
+    url: https://twitter.com/your_twitter_handle
 
 # Exclude from processing.
 # The following items will not be processed, by default.
